--- a/src/layouts/Layout.module.less
+++ b/src/layouts/Layout.module.less
@@ -19,6 +19,13 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+
+            .optionsHeader {
+                display: flex;
+                gap: 1.5rem;
+                align-items: center;
+                width: 100%;
+            }
         }
 
         .siteLayoutContent {
