change padding top HeaderPage.module.less

--- a/src/layouts/header-page/HeaderPage.module.less
+++ b/src/layouts/header-page/HeaderPage.module.less
@@ -1,7 +1,7 @@
 .headerPage {
     max-width: @max-width;
     margin: 0 auto;
-    padding: 2rem 1rem;
+    padding: .5rem 1rem;
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -17,8 +17,7 @@
     .back {
         font-size: 26px;
         color: @primary-color;
-        padding: 0.5rem;
-        padding-left: 0;
+        padding: 0.5rem 0.5rem 0.5rem 0;
         cursor: pointer;
     }
 
