--- a/src/features/status/status-drop-columns/StatusDropColumns.module.less
+++ b/src/features/status/status-drop-columns/StatusDropColumns.module.less
@@ -10,6 +10,7 @@
 
 .container {
     display: inline-block;
+    padding: 0 1rem;
     //overflow-x: auto;
     //height: calc(100vh - calc(60px + 2.5rem));
 }
