update order editor

--- a/src/features/additional-service/select-additional-services/SelectAdditionalServices.module.less
+++ b/src/features/additional-service/select-additional-services/SelectAdditionalServices.module.less
@@ -22,15 +22,6 @@
     padding-bottom: .5rem;
 }
 
-.additionalService .actions {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    margin-top: .5rem;
-    align-items: center;
-}
-
-.additionalService .actions .count {
-    font-size: @heading-4-size;
-    font-weight: bold;
+.additionalService .price{
+    margin-bottom: .5rem;
 }
