--- a/src/features/product/select-product/SelectProduct.module.less
+++ b/src/features/product/select-product/SelectProduct.module.less
@@ -1,4 +1,8 @@
 .container {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(6, 150px);
+
     .addProduct {
         width: 150px;
         position: relative;
