--- a/src/layouts/sidebar/Sidebar.module.less
+++ b/src/layouts/sidebar/Sidebar.module.less
@@ -4,6 +4,46 @@
 
     .logo {
         height: 64px;
+        padding: .5rem 1rem;
+        display: grid;
+        grid-template-columns: 45px 1fr;
+        gap: 1rem;
+        align-items: center;
+
+        .logoImage {
+            height: 45px;
+            width: 45px;
+            border-radius: 50%;
+            overflow: hidden;
+            background: @primary-color;
+
+            img {
+                height: 100%;
+                object-fit: contain;
+                transform: scale(.8);
+            }
+        }
+
+        .title {
+            //overflow: hidden;
+            position: relative;
+            display: flex;
+            align-items: center;
+            font-size: 20px;
+            color: white;
+            width: 100%;
+            height: 100%;
+
+            .text {
+                font-weight: bolder;
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                padding: .5rem 0;
+            }
+        }
     }
 
     .siteLayoutMenu {
