--- a/src/layouts/sidebar/Sidebar.module.less
+++ b/src/layouts/sidebar/Sidebar.module.less
@@ -42,6 +42,16 @@
                 width: 100%;
                 height: 100%;
                 padding: .5rem 0;
+
+                .tag {
+                    position: absolute;
+                    font-size: @font-size-sm - 5;
+                    background: @primary-color;
+                    border-radius: @border-radius-base;
+                    padding: 0 .5rem;
+                    right: .5rem - .25rem;
+                    bottom: 4px;
+                }
             }
         }
     }
