update selected product for create order

--- a/src/App.less
+++ b/src/App.less
@@ -121,7 +121,7 @@ hr {
     }
 }
 
-.ant-btn.blue {
+.ant-btn.blue:not(.ant-btn-dangerous):not(:disabled) {
     background-color: @blue-color;
     border-color: @blue-color;
 }
