--- a/src/features/product/select-product/SelectProduct.module.less
+++ b/src/features/product/select-product/SelectProduct.module.less
@@ -1,10 +1,10 @@
 .container {
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(6, 150px);
+    grid-template-columns: repeat(5, 1fr);
 
     .addProduct {
-        width: 150px;
+        //width: 200px;
         position: relative;
         display: inline-block;
         margin-bottom: 0.5rem;
