update order editor

--- a/src/features/order/order-editor/content/discount/Discount.less
+++ b/src/features/order/order-editor/content/discount/Discount.less
@@ -2,7 +2,7 @@
     display: grid;
     padding: 1rem 0;
     font-size: calc(@font-size-lg + 2px);
-    border-bottom: 1px solid @border-color-base;
+    border-bottom: 1px solid @divider-color;
     margin-bottom: 1rem;
     gap: 1rem;
     grid-template-columns: 96px 1fr 40px;
