--- a/src/features/payment-method/select-payment-method/SelectPaymentMethod.module.less
+++ b/src/features/payment-method/select-payment-method/SelectPaymentMethod.module.less
@@ -1,39 +1,36 @@
-.header {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+.paymentMethod {
+    display: flex;
+    align-items: center;
     gap: 1rem;
 
-    .paymentMethod {
-        padding: 1rem;
-        border-radius: @border-radius-base;
-        text-align: center;
-        box-shadow: 0 5px 20px 5px rgb(0 0 0 / 5%);
-        cursor: pointer;
+    img {
+        width: 40px;
+        height: 40px;
+        object-fit: contain;
+    }
 
-        &.active {
-            background: @primary-color;
-            color: @white;
-            font-weight: bold;
+    .text {
+        font-size: @font-size-lg;
+    }
+}
+
+.selectedPaymentMenu {
+    padding: 1rem 0 0;
+
+    .selectedPaymentItem {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+
+        &:not(:last-child) {
+            margin-bottom: .5rem;
         }
 
-        .image {
-            width: 60px;
-            height: 60px;
-            margin: 0 auto .5rem;
-            padding: .5rem;
-            background: @white;
-            border-radius: @border-radius-base;
-
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-            }
-        }
-
-        .title {
-            font-size: @font-size-lg;
-            line-height: 1;
+        img {
+            width: 40px;
+            height: 40px;
+            object-fit: contain;
         }
     }
+
 }
