update mobile ui

--- a/src/features/product/select-product/SelectProduct.module.less
+++ b/src/features/product/select-product/SelectProduct.module.less
@@ -1,7 +1,22 @@
+.drawer {
+    width: 1200px;
+
+    @media (max-width: 1200px) {
+        width: 100%;
+    }
+}
+
 .container {
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(6, 1fr);
+
+    @media (max-width: 576px) {
+        & {
+            grid-template-columns: repeat(2, 1fr);
+            margin-bottom: 1.5rem;
+        }
+    }
 
     .addProduct {
         //width: 200px;
