--- a/src/features/additional-service/select-additional-services/SelectAdditionalServices.module.less
+++ b/src/features/additional-service/select-additional-services/SelectAdditionalServices.module.less
@@ -4,6 +4,13 @@
     gap: 1rem;
 }
 
+@media (max-width: 576px) {
+    .container {
+        grid-template-columns: 1fr 1fr;
+        margin-bottom: 1.5rem;
+    }
+}
+
 .additionalService {
     padding: 1rem;
     text-align: center;
@@ -21,6 +28,6 @@
     padding-bottom: .5rem;
 }
 
-.additionalService .price{
+.additionalService .price {
     margin-bottom: .5rem;
 }
