--- a/src/features/order/order-editor/content/RightInformation.module.less
+++ b/src/features/order/order-editor/content/RightInformation.module.less
@@ -38,4 +38,27 @@
     .mb {
         margin-bottom: 1.5rem;
     }
+
+    .paymentStatus {
+        margin-bottom: 1rem;
+        display: block;
+
+        .content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: .5rem;
+            margin-bottom: .25rem;
+        }
+
+        .title {
+            font-size: @font-size-lg;
+        }
+
+        .desc {
+            font-size: @font-size-sm;
+            color: @text-color-secondary;
+            line-height: 1.2;
+        }
+    }
 }
